tests/compile_fail/defined_equiv.out
In file included from tests/compile_fail/defined_equiv.cpp:17:
src/secureenumconverter.inc:4:6: error: #error "SEC_EQUIV defined before including secureenumconverter.inc"
     #error "SEC_EQUIV defined before including secureenumconverter.inc"
      ^~~~~
compilation terminated due to -Wfatal-errors.
